--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jquery": "^3.3.1",
     "nan": "^2.10.0",
     "node-gyp": "^3.6.2",
-    "three": "^0.91.0"
+    "three": "^0.91.0",
+    "three-obj-loader": "^1.1.3"
   },
   "devDependencies": {
     "electron-rebuild": "^1.7.3"
